fix: add margin-block to scrollbar track for improved spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -96,6 +96,7 @@ main {
 
     &::-webkit-scrollbar-track {
         background-color: transparent;
+        margin-block: 10px;
 
         &:hover {
             background-color: #55555744;
